--- a/css/evol.advancedSearch.css
+++ b/css/evol.advancedSearch.css
@@ -25,18 +25,25 @@
 	padding: 4px 33px 4px 12px;
 }
 
+.evo-editFilter{
+	vertical-align: top;
+}
 .evo-editFilter select, .evo-editFilter input{
 	margin:1px 6px 6px 1px;
 	font-size: 1.1em; 
 }
+.evo-editFilter span#value {
+	margin-right:5px;
+}
 .evo-editFilter #value input[type="checkbox"] {
 	margin-left:5px;
 }
-.evo-editFilter input[type="number"]#value {
-	width:7em;
+.evo-editFilter input[type="number"]#value,
+.evo-editFilter input[type="time"]#value, .evo-editFilter input[type="time"]#value2 {
+	width:6em;
 }
 
-.evo-editFilter .hasDatepicker{
+.evo-editFilter input.hasDatepicker{
 	width:7em;
 }
 
