--- a/css/evol.advancedSearch.css
+++ b/css/evol.advancedSearch.css
@@ -69,3 +69,7 @@
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
 }
+
+.evo-editFilter > .select2-container{
+	margin:1px 6px 6px 1px;
+}
